--- a/graduatetracer/tracer/templates/tracer/mainAdmin/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/mainAdmin/sidebar.html
@@ -43,6 +43,19 @@
         </a>
     </li>
     <!-- Nav Item - Pages Collapse Menu -->
+    <!-- <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <i class="fas fa-graduation-cap"></i>
+            <span>Graduates</span>
+        </a>
+        <div id="collapseOne" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <a class="collapse-item" href="{% url 'AdminDisplayPendingAccts' %}">Pending</a>
+                <a class="collapse-item" href="{% url 'AdminDisplayApprovedAccts' %}">Approved</a>
+            </div>
+        </div>
+    </li> -->
+    <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
             <i class="fas fa-bullhorn"></i>
