--- a/graduatetracer/tracer/templates/tracer/user/UpdateInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/UpdateInfo.html
@@ -166,5 +166,89 @@
     </div>
   </div>
 </div>
+
+<!-- <div class="container-fluid">
+  <div class="row d-flex justify-content-center">
+    <div class="col-lg-12">
+      <div class=" card border-0 d-flex text-white justify-content-center mt-lg-4 mb-lg-4 ml-4 mr-4 bg-c-lite-green">
+        <form method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="row">
+              <div class="col-md-3 border-right">
+                  <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <div class="col-lg-12 mt-4 profile-pic-div">
+                      <img class="img-custom-border" src="{{request.user.profile_picture.url}}" id="photo">
+                      <input type="file" id="file" name="profile" hidden>
+                      <label for="file" id="uploadBtn">Choose Profile</label>
+                    </div>
+                    <span class="font-weight-bold">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span><span
+                    class="text-black-50">{{user.email}}</span><span> </span>
+                  </div>
+              </div>
+              <div class="col-md-6 border-right">
+                  <div class="p-2 py-5">
+                      <div class="d-flex justify-content-between align-items-center mb-4">
+                          <h4 class="text-right">Profile Settings</h4>
+                      </div>
+                      <div class="row mt-2">
+                          <div class="col-md-4">
+                            <label class="labels">First Name</label>
+                            {{grad_info.first_name}}
+                          </div>
+                          <div class="col-md-4">
+                            <label class="labels">Middle Name</label>
+                            {{grad_info.middle_name}}
+                          </div>
+                          <div class="col-md-4">
+                            <label class="labels">Last Name</label>
+                            {{grad_info.last_name}}
+                      </div>
+                      <div class="row mt-3">
+                          <div class="col-md-6">
+                            <label class="labels">Address</label>
+                            {{grad_info.address}}
+                          </div>
+                          <div class="col-md-6">
+                            <label class="labels">Birth Date</label>
+                            {{grad_info.birth_date}}
+                          </div>
+                      </div>
+                      <div class="row mt-3">
+                          <div class="col-md-3"><label class="labels">Age</label><input type="text" class="form-control" placeholder="first name" value=""></div>
+                          <div class="col-md-3"><label class="labels">Gender</label><input type="text" class="form-control" value="" placeholder="surname"></div>
+                          <div class="col-md-6"><label class="labels">Contact Number</label><input type="text" class="form-control" value="" placeholder="surname"></div>
+                      </div>
+                      <div class="row mt-3">
+                          <div class="col-md-6"><label class="labels">School</label><input type="text" class="form-control" placeholder="first name" value=""></div>
+                          <div class="col-md-6"><label class="labels">Course</label><input type="text" class="form-control" value="" placeholder="surname"></div>
+                      </div>
+
+                      <div class="row mt-3">
+                          <div class="col-md-6"><label class="labels">Year Graduated</label><input type="text" class="form-control" placeholder="country" value=""></div>
+                          <div class="col-md-6"><label class="labels">Employment Status</label><input type="text" class="form-control" value="" placeholder="state"></div>
+                      </div>
+                      <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                  </div>
+              </div>
+              <div class="col-md-3">
+                  <div class="p-3 py-5">
+                      <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
+                      <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
+                      <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
+                  </div>
+              </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
+
 <script src="{% static '/js/user/profile.js' %}"></script>
+
+
+
 {% endblock %}
