--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -2,88 +2,124 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
-	<div class="row justify-content-center mt-3">
-		<div class="col-md-5 col-sm-12 border-bottom">
-			<h5>Add a Post!</h5>
-		</div>
-	</div>
 
-	<div class="row justify-content-center mt-4 mb-5">
-		<div class="col-md-5 col-sm-12 border-bottom">
-			<form method="POST" enctype="multipart/form-data">
-				{% csrf_token %}
-				{{ form | crispy }}
-				<div class="d-grid gap-2">
-					<button class="btn btn-success btn-sm btn-block">Submit!</button>
-				</div>
+<div class="row">
+    <div class="col-lg-9 mt-1 ">
+        <div class="row justify-content-center mt-4 mb-5">
 
-			</form>
-		</div>
-	</div>
+            <div class="card w-80 ">
+                <div class="card-header">
+                    <strong>ADD POST!</strong>
+                </div    >
+            <div class="card-body">
+                <button type="button " class="btn btn-light btn-lg btn-block"  data-toggle="modal" data-target=".bd-example-modal-lg" style="border-radius:12px;"><h6><em> type something here...</em></h6></button>
+            </div>
+            <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="row justify-content-center ">
+                            <div class=" col-md-10 col-md-5 col-sm-12 ">
+                                <h5><strong>CREATE POST</strong></h5>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="card w-100 m-auto">
+                                <div class="card-body">
 
-	{% for post in post_list %}
+                                    <form method="POST" enctype="multipart/form-data">
+                                        {% csrf_token %}
+                                        {{ form | crispy }}
+                                        <div class="d-grid gap-2">
+                                            <button class="btn btn-success btn-sm btn-block">POST</button><br>
+                                            <button type="button" class="btn btn-light btn-md "  data-toggle="modal" data-target=".bd-example-modal-lg" style="float:right;"> <strong>Cancel </strong></button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
 
-<div class="row justify-content-center mt-3">
-	<div class="col-md-5 col-sm-12 border-bottom position-relative">
+                    </div>
+                </div>
 
-		<div class="card text-black mb-3">
-			<div class="card-header bg-trasparent border-none" style="background-color:powderblue;">
+        </div>
+        </div>
+    </div>
+    <div class="row mt-3 w-100 m-auto">
+        {% for post in post_list %}
+        <div class="col-md-12 col-lg-12 col-sm-12 border-bottom position-relative">
+            <div class="shadow p-3 mb-2 mb-0 bg-white rounded">
+                <div class="card-header bg-trasparent border-none" style="background-color: #fff;">
+                    <a class="nav-link" id="{% url 'DisplayGradInfo' %}" href="{% url 'DisplayGradInfo' %}">
+                        <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}" width=" 40" height="40" alt="User-Profile-Image">
+                        <span class="mr-2 d-none d-lg-inline text-gray-700 small"><strong>{{user.first_name}} {{user.middle_name}} {{user.last_name}}</strong></span>
+                    </a>
+                    <div class="mt-0 text-dark">
+                        <font size="">{{ post.created_on }}</font>
+                    </div>
+                </div>
+                <div class="card-body" style=" background-color: #fff !important;color: black;">
+                    <p>{{ post.body }}</p>
+                    <div class="position-relative text-brown mt-1">
+                    {% if post.image %}
+                        <img src="{{ post.image.url }}" class="post-image" />
+                    {% endif %}
 
-				<a href="{% url 'GradProfilePicture' %}">
-					<img class="img-profile rounded-circle shadow-sm" src="{{user.profile_pic.url}}" width=" 40" height="40" alt="User-Profile-Image">
+                    <a href="{% url 'post-detail' post.pk %}" class="stretched-link"></a>
+                    </div>
+                </div>
+                <div class="card-footer bg-trasparent border-none " style="background-color: fff;">
+                    <div class="d-flex flex-row">
+                        <form method="POST" action="{% url 'like' post.pk %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{ request.path }}">
+                            <button style="background-color: lightgray;color: info; border-bottom-color: none; box-shadow: none;" type="submit">
+                                <i class=" small fas fa-thumbs-up"><span> {{ post.likes.all.count }} </span></i>
+                            </button>
+                        </form>
+                        <form method="POST" action="{% url 'dislike' post.pk %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{ request.path }}">
+                            <button style="background-color: lightgray;color: info; border-bottom-color: none; box-shadow: none;" type="submit">
+                                <i class="small fas fa-thumbs-down"><span> {{ post.dislikes.all.count }} </span></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        </div>
+        </div>
+            <div class="col-lg-3">
+                <div class="row justify-content-center  text-content" style="height:100% !important; padding-bottom:none !important;">
+                    <ul class=" bg-gradient-light sidebar sidebar-dark accordion" id="sidebnav-wrapper" style="height:100% !important; text-color:black;" >
+                        <div class="body">
+                            <li class="sidnav-brand">
+                                <strong>YOUR FRIENDS</strong>
+                                <li>example rani</li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'friendlist' %}">
+                                        <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                                        <span>Dashboard</span></a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'friendlist' %}">
+                                        <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                                        <span>Dashboard</span></a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'friendlist' %}">
+                                        <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                                        <span>Dashboard</span></a>
+                                </li>
 
-					<a class="post-text ">
-					<a href="{% url 'GradProfilePicture' %}" class="mr-2 d-none d-lg-inline text-dark small" src="post.user.profile_pic.url"><font size="4">{{ post.author.firstname }} {{ post.author.lastname }}</font>
-					</a>
-				</a>
-				</a>
 
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
 
-				<div class="mt-0 text-white">
-  				<font size="1">{{ post.created_on }}</font>
-  			    </div>
-			</div>
-
-
- 				 <div class="card-body">
- 				 	<div class="position-relative text-brown mt-1">
- 				 		{% if post.image %}
- 				 		<img src="{{ post.image.url }}" class="post-image" />
- 				 		{% endif %}
-   					 	<font size="4"> {{ post.body }}
-   					 	<a href="{% url 'post-detail' post.pk %}" class="stretched-link"></a>
-   				 	 </div>
-   				 </div>
-
-
-
-					 			<div class="card-footer bg-trasparent border-none " style="background-color:powderblue;">
-									<div class="d-flex flex-row">
-										<form method="POST" action="{% url 'like' post.pk %}">
- 											{% csrf_token %}
-	 									<input type="hidden" name="next" value="{{ request.path }}">
-										<button style="background-color: lightgray;color: info; border-bottom-color: none; box-shadow: none;" type="submit">
-											<i class=" small fas fa-thumbs-up"><span> {{ post.likes.all.count }} </span></i>
-										</button>
-									</form>
-
-									<form method="POST" action="{% url 'dislike' post.pk %}">
- 										{% csrf_token %}
-	 								<input type="hidden" name="next" value="{{ request.path }}">
-									<button style="background-color: lightgray;color: info; border-bottom-color: none; box-shadow: none;" type="submit">
-										<i class="small fas fa-thumbs-down"><span> {{ post.dislikes.all.count }} </span></i>
-									</button>
-								</form>
-							</div>
-						</div>
-
-		</div>
-
-
-	</div>
-</div>
-
-	{% endfor %}
+    </div>
 </div>
 {% endblock content %}
