--- a/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/admindash.html
@@ -13,10 +13,10 @@
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
                                 School</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{request.user.school}}</div>
+                            <div class="h5 mb-0 font-weight-bold text-black-800">{{request.user.school}}</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fa fa-school fa-2x text-gray-800"></i>
+                            <i class="fa fa-school fa-2x text-black-800"></i>
                         </div>
                     </div>
                 </div>
@@ -29,10 +29,10 @@
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
                                 Users</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{count_users}}</div>
+                            <div class="h5 mb-0 font-weight-bold text-black-800">{{count_users}}</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-users fa-2x text-gray-800"></i>
+                            <i class="fas fa-users fa-2x text-black-800"></i>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                               </div>
                               <div class="row no-gutters align-items-center">
                                   <div class="col-auto">
-                                      <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{count_pending}} </div>
+                                      <div class="h5 mb-0 mr-3 font-weight-bold text-black-800">{{count_pending}} </div>
                                   </div>
                                   <div class="col">
                                       <div class="progress progress-sm mr-2">
@@ -60,7 +60,7 @@
                               </div>
                           </div>
                           <div class="col-auto">
-                              <i class="fas fa-user-clock fa-2x text-gray-800"></i>
+                              <i class="fas fa-user-clock fa-2x text-black-800"></i>
                           </div>
                       </div>
                   </div>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="row no-gutters align-items-center">
                                 <div class="col-auto">
-                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">{{count_approved}} </div>
+                                    <div class="h5 mb-0 mr-3 font-weight-bold text-black-800">{{count_approved}} </div>
                                 </div>
                                 <div class="col">
                                     <div class="progress progress-sm mr-2">
@@ -89,7 +89,7 @@
                             </div>
                           </div>
                           <div class="col-auto">
-                              <i class="fas fa-user-check fa-2x text-gray-800"></i>
+                              <i class="fas fa-user-check fa-2x text-black-800"></i>
                           </div>
                       </div>
                   </div>
@@ -110,16 +110,21 @@
                       <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
                           src="{% static 'img/visualizer.svg'  %}" alt="Dashboard-Visualizer">
                   </div>
-                  <p>Recommender System aims to lessen unemployment among college graduates with its
+                  <p>
+                    <font size="4" face="arial" color="black">
+                    Recommender System aims to lessen unemployment among college graduates with its
                      easy to navigate features and wide array of available jobs ranging from information
-                     technology to industrial technology related work.</p>
+                     technology to industrial technology related work.
+                   </font></p>
 
-                  <p>Hunting for jobs has never been this easy. No more transportation costs
+                  <p>
+                    <font size="4" face="arial" color="black">
+                    Hunting for jobs has never been this easy. No more transportation costs
                     and walking under the heat of the sun to look for companies looking for
                     qualified workers like you. Recommender System brings to you opportunities
                     right in front of you at your own computer screens. You only have to be a college
                     graduate to avail of these services.
-                  </p>
+                  </font></p>
               </div>
           </div>
         </div>
