--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -1,213 +1,177 @@
 {% extends 'tracer/user/template.html'%}
 {% load static %}
+{% load widget_tweaks %}
 {% block content %}
 
-<style media="screen">
-  body{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-  }
-  .emp-profile{
-      padding: 3%;
-      margin-top: 3%;
-      margin-bottom: 3%;
-      border-radius: 0.5rem;
-      background: #fff;
-  }
-  .profile-img{
-      text-align: center;
-  }
-  .profile-img img{
-      width: 70%;
-      height: 100%;
-  }
-  .profile-img .file {
-      position: relative;
-      overflow: hidden;
-      margin-top: -20%;
-      width: 70%;
-      border: none;
-      border-radius: 0;
-      font-size: 15px;
-      background: #212529b8;
-  }
-  .profile-img .file input {
-      position: absolute;
-      opacity: 0;
-      right: 0;
-      top: 0;
-  }
-  .profile-head h5{
-      color: #333;
-  }
-  .profile-head h6{
-      color: #A9A9A9;
-  }
-  .profile-head .nav-tabs{
-      margin-bottom:5%;
-  }
-  .profile-head .nav-tabs .nav-link{
-      color: #938C8C;
-      font-weight:600;
-      border: none;
-  }
-  .profile-head .nav-tabs .nav-link.active{
-      border: none;
-      border-bottom:2px solid #0062cc;
-  }
-  .profile-work{
-      padding: 14%;
-      margin-top: -15%;
-  }
-  .profile-work a{
-      font-size: 12px;
-      color: #818182;
-      font-weight: 600;
-      margin-top: 10%;
-  }
-  .profile-work p{
-      text-decoration: none;
-      color: #495057;
-      font-weight: 600;
-      font-size: 14px;
-  }
-  .profile-work p{
-    text-decoration: none;
-    color: #495057;
-    font-weight: 600;
-    font-size: 14px;
-  }
-  .profile-work p{
-      list-style: none;
-  }
-  .profile-tab label{
-      font-weight: 600;
+<style>
+    .profile-pic-div {
+        float: right;
+        max-height: 200px;
+        max-width: 200px;
+        position: relative;
+        overflow: hidden;
+    }
+    #photo {
+        height: 100%;
+        width: 100%;
+    }
 
-  .profile-tab label{
-      font-weight: 600;
-  }
-  .profile-tab p{
-      font-weight: 600;
-      color: #0062cc;
-  }
+    #uploadBtn {
+    height: 40px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    background: rgba(0, 0, 0, 0.7);
+    border: 1px solid rgb(160, 160, 160);
+    color: wheat;
+    line-height: 30px;
+    font-family: sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+    }
+
+    ::-webkit-file-upload-button {
+    font: inherit;
+    -webkit-appearance: button
+    }
+    [hidden] {
+    display: none!important
+    }
+
 </style>
 
-<!------ Include the above in your HEAD tag ---------->
-
-<div class="container emp-profile">
-            <form method="POST" action="{% url 'DisplayGradInfo' %}">
-              {% csrf_token %}
-                <div class="row">
-                    <div class="col-md-4">
-                      <div class="col-lg-12 mt-2 ml-4 text-center profile-pic-div">
-                          <img class="img-profile rounded-circle shadow-sm" src="{{user.profile_picture.url}}" width=" 100" height="100" alt="User-Profile-Image" id="photo">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="profile-head">
-                                    <h5>
-                                        {{user.first_name}} {{user.middle_name}} {{user.last_name}}
-                                    </h5>
-                                    <h6>
-                                        {{user.email}}
-                                    </h6>
-                                    <br>
-
-                            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Status</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <a href="{% url 'UpdateGradInfo' user.id %}" button type="button" class="btn btn-outline-warning btn-sm text-dark "><i class="fas fa-user-edit"></i> Edit Information </a>
-                    </div>
+<div class="container-fluid">
+  <div class="row d-flex justify-content-center">
+    <div class="col-lg-12">
+      <div class=" card border-0 d-flex text-white justify-content-center mt-lg-4 mb-lg-4 ml-4 mr-4">
+        <form method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="row mb-3 ">
+            <div class="col-md-4">
+              <div class="d-flex flex-column align-items-center text-center pt-2 pb-4">
+                <div class="col-lg-0 mt-4 mb-4">
+                  <div class="col-lg-12 mt-4 profile-pic-div">
+                    <img class="img-custom-border" src="{{request.user.profile_picture.url}}" id="photo">
+                    <input type="file" id="file" name="profile" hidden>
+                    <label for="file" id="uploadBtn">Choose Profile</label>
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="profile-work">
-                            <p>Name: &nbsp;&nbsp;{{user.first_name}} {{user.middle_name}} {{user.last_name}}</p>
-                            <p>Course Graduated: &nbsp;&nbsp;{{user.course_type}}</p>
-                            <p>School Graduated: &nbsp;&nbsp{{user.school}}</p>
-                            <p>ID Number: &nbsp;&nbsp{{user.IDNum}}</p>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="tab-content profile-tab" id="myTabContent">
-                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Gender</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.gender}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Birthdate</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.birth_date}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Age</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.age}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Address</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.address}}</p>
-                                            </div>
-                                        </div>
-                            </div>
-                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Year Graduated</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.date_graduated}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Status</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.employment_status}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Skills</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.skill}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Job Description</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{user.job_description}}</p>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-                    </div>
+                <h6>{{user.first_name}} {{user.middle_name}} {{user.last_name}}</h6>
+                <div class="col-md-13 pl-4 pb-3">
+                  <span class="text-black-70">{{user.email}}</span>
                 </div>
-            </form>
-        </div>
+
+              </div>
+              <div class="col-md-12 pl-4 pb-3">
+                <label class="labels">First Name</label>
+                {{grad_info.first_name}}
+              </div>
+              <div class="col-md-12 pl-4 pb-3">
+                <label class="labels">Middle Name</label>
+                {{grad_info.middle_name}}
+              </div>
+              <div class="col-md-12 pl-4 pb-3">
+                <label class="labels">Last Name</label>
+                {{grad_info.last_name}}
+              </div>
+            </div>
+
+            <div class="col-md-4 mt-0">
+              <div class="pt-4">
+                <div class="text-center d-flex justify-content-between align-items-center mb-5">
+                  <h4 class="text-right">Profile Settings</h4>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Birthdate</label>
+                    {{grad_info.birth_date}}
+                  </div>
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Age</label>
+                    {{grad_info.age}}
+                  </div>
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Gender</label>
+                    {{grad_info.gender}}
+                  </div>
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Address</label>
+                    {{grad_info.address}}
+                  </div>
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Contact Number</label>
+                    {{grad_info.contact_number}}
+                  </div>
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">ID Number</label>
+                    {{grad_info.IDNum}}
+                  </div>
+                </div>
+              </div>
+            </div>
+            <br>
+            <br>
+            <div class="col-md-4 mt-0">
+              <div class="pt-4">
+                <div class="text-center d-flex justify-content-between align-items-center mb-5">
+                  <h4 class="text-right"></h4>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Year Graduated</label>
+                    {{grad_info.date_graduated}}
+                  </div>
+                  <br>
+
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Course</label>
+                    {% render_field grad_info.course_type class="form-control" disabled="disabled" %}
+                  </div>
+                  <br>
+
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">School</label>
+                    {% render_field grad_info.school class="form-control" disabled="disabled" %}
+                  </div>
+                  <br>
+
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Employment Status</label>
+                    {{grad_info.employment_status}}
+                  </div>
+                  <br>
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Job Description</label>
+                    {{grad_info.job_description}}
+                  </div>
+                  <br>
+
+                  <div class="col-md-12 pb-3">
+                    <label class="labels">Skills</label>
+                    {{grad_info.skill}}
+                  </div>
+                </div>
+                <br>
+
+
+                <div class="pt-3 text-center">
+                  <button type="submit" name="UpdateGradInfo" role="button" class="btn btn-outline-success">
+                    <i class="fa fa-fw fa-lg fa-check-circle"></i>
+                    Update Profile
+                  </button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="{% static '/js/user/profile.js' %}"></script>
 {% endblock %}
