--- a/graduatetracer/tracer/templates/tracer/admin/browse.html
+++ b/graduatetracer/tracer/templates/tracer/admin/browse.html
@@ -60,16 +60,17 @@
 
 <div class="row">
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page1','Page2');">List View</a>
-  </div>
-  <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
     <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page2','Page1');">Tile View</a>
   </div>
+  <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
+    <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page1','Page2');">List View</a>
+  </div>
+  
 
 </div>
 
 
-<div id="Page1" class="container bg-white pr-4 pl-4 pb-3">
+<div id="Page1" class="container-fluid bg-white pr-4 pl-4 pb-3">
   <div class="row ">
 
     <div class="row w-20">
@@ -126,8 +127,8 @@
             <th class="th-w-20" style="white-space: nowrap">Job Name</th>
             <th class="th-w-20" style="white-space: nowrap">Category</th>
             <th class="th-w-20" style="white-space: nowrap">Salary</th>
-            <th class="th-w-10" style="white-space: nowrap">Address</th>
-            <th class="th-w-10" style="white-space: nowrap">Option</th>
+            <th class="th-w-20" style="white-space: nowrap">Address</th>
+            <th class="th-w-20" style="white-space: nowrap">Option</th>
           </tr>
       </thead>
       <tbody>
@@ -151,17 +152,17 @@
               </td>
               <td>{{ad.date_created|naturalday}}</td>
               <td option-table-wid>
-                <div class="row">
-                  <div class="col-lg-4 text-center pr-0">
+                <div class="row w-100 m-auto p-0">
+                  <div style="width:33.333%;" class="text-center pr-0">
                     <a class href="{% url 'view_ad' ad.id %}"><i class="fas fa-eye"></i></a>
                   </div>
-                  <div class="col-lg-4 text-center">
-                    <a class="dropdown-item text-info p-0" href="{% url 'update_ad' ad.id %}"><i class="mr-2 fas fa-wrench"></i></a>
+                  <div style="width:33.333%;" class="text-center">
+                    <a class="dropdown-item text-info p-0" href="{% url 'update_ad' ad.id %}"><i class="fas fa-wrench"></i></a>
                   </div>
-                  <div class="col-lg-4 text-center pl-0">
+                  <div style="width:33.333%;" class="text-center pl-0">
                     <form method="post" action="{% url 'delete_ad' ad.id %}" >
                       {% csrf_token %}
-                      <button type="submit" class="dropdown-item text-danger p-0"><i class="mr-2 fas fa-trash-alt"></i></button>
+                      <button type="submit" class="dropdown-item text-danger p-0"><i class="fas fa-trash-alt"></i></button>
                     </form>
                   </div>
                 </div>
